tests/out/error/struct/call_field.in.bt
struct Foo{
	my_field i32
}

f := Foo{}
f.my_field()
