tests/out/error/struct/call_field.out
tests/out/error/struct/call_field.in.bt:6:3 error: struct field `my_field` is not a method
